--- a/src/02-flip/flip-image-gallery-advanced/styles.css
+++ b/src/02-flip/flip-image-gallery-advanced/styles.css
@@ -1,11 +1,20 @@
 * {
   margin-right: 0;
 }
-
+body {
+  display: flex;
+  margin: 0;
+  background-color: #e6e6e6;
+}
 main {
-  width: 100vw;
+  width: 50vw;
   height: 100vh;
+  overflow: auto;
   position: relative;
+}
+img {
+  max-height: 400px;
+  width: 100%;
 }
 
 section {
@@ -27,9 +36,72 @@ img {
 h1 {
   text-align: center;
 }
+.selectedImage {
+  width: 50vw;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
 .details {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
+  min-width: 400px;
+  min-height: 600px;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+}
+
+.detail {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  width: 90.1vmin;
+  cursor: pointer;
+  font-size: 0;
+  display: flex;
+  flex-direction: column;
+  visibility: hidden;
+  max-height: 100%;
+  overflow: auto;
+  letter-spacing: 2px;
+}
+
+.detail > img {
+  position: relative;
+  z-index: 1;
+}
+
+.detail .content {
+  background: #f2f2f2;
+  padding: 2rem 1.5rem;
+  font-size: 1rem;
+  box-sizing: border-box;
+  flex-grow: 1;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+.detail .content > * {
+  margin-bottom: 1rem;
+}
+
+.detail .title {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.detail .secondary {
+  color: black;
+  font-size: 25px;
+}
+
+.detail .description {
+  color: black;
+  font-size: 25px;
+}
+
+.selected-image {
+  height: 400px;
+  width: 400px;
 }
